Fixed issue where a scrollbar would appear and change the layout

--- a/varicity/public/style.css
+++ b/varicity/public/style.css
@@ -7,3 +7,7 @@
     background: rgba(0,50,80,0.7);
     color: white;
 }
+
+body {
+    overflow: hidden;
+}
